// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appinsights-instrumentation - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Guidance for instrumenting webapps with Azure Application Insights. Provides telemetry patterns, SDK setup, and configuration references. WHEN: how to instrument app, App Insights SDK, telemetry patterns, what is App Insights, Application Insights guidance, instrumentation examples, APM best practices.",
  "extractedKeywords": [
    "app service",
    "appinsights",
    "application",
    "azure",
    "best",
    "bicep",
    "cli",
    "configuration",
    "container",
    "examples",
    "guidance",
    "insights",
    "instrument",
    "instrumentation",
    "instrumenting",
    "monitor",
    "observability",
    "patterns",
    "practices",
    "provides",
    "references",
    "setup",
    "telemetry",
    "webapps",
    "what",
    "when",
    "with",
  ],
  "name": "appinsights-instrumentation",
}
`;

exports[`appinsights-instrumentation - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "appinsights",
  "application",
  "azure",
  "best",
  "bicep",
  "cli",
  "configuration",
  "container",
  "examples",
  "guidance",
  "insights",
  "instrument",
  "instrumentation",
  "instrumenting",
  "monitor",
  "observability",
  "patterns",
  "practices",
  "provides",
  "references",
  "setup",
  "telemetry",
  "webapps",
  "what",
  "when",
  "with",
]
`;
